cmake_minimum_required(VERSION 3.10)

project(ScalarConverter)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_COMPILER /usr/bin/clang++)
set(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra")
set(CMAKE_EXE_LINKER_FLAGS "-lm")
set(CMAKE_CXX_STANDARD 98)
aux_source_directory(. SRC)
add_executable(convert ${SRC})
